quorum/test/tests/TypeChecker/Pass/ImpAssignIntObjIntObjWrapped.quorum
class main
    action main
        Integer i
        i:SetValue(5)
        Integer int = i
        integer x = int:GetValue()
    end
end