quorum/test/tests/TypeChecker/Fail/ImpAssignBoolObjIntObjWrapped.quorum
class main
    action main
        Integer i
        i:setValue(5)
        Boolean b = i
    end
end